fix(ui-mode): properly align error and warning icons in the ActionsList (#36693)

--- a/packages/trace-viewer/src/ui/actionList.css
+++ b/packages/trace-viewer/src/ui/actionList.css
@@ -14,6 +14,10 @@
   limitations under the License.
 */
 
+.action-title > .hbox {
+  align-items: center;
+}
+
 .action-title-line {
   display: block;
   overflow: hidden;
